[package]
name = "tiny_alchemy_box"
version = "0.1.0"
authors = ["bsoptei <bsoptei@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.13.0"
js-sys = "0.3.4"
num-traits = "0.2"
pest = "2.1"
pest_derive = "2.1"
photonix = "0.1.1"
wasm-bindgen = "0.2.29"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlCollection',
  'HtmlElement',
  'Window',
]